--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -10,7 +10,7 @@ body {
 }
 
 #__next {
-  @apply flex flex-col items-center h-screen w-screen justify-center font-sans bg-lightGray;
+  @apply flex flex-col h-screen w-screen font-sans bg-lightGray;
 }
 
 @layer base {
