--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,9 +3,9 @@
 @tailwind utilities;
 
 html {
-  @apply m-0 h-screen w-screen overflow-hidden p-0 antialiased outline-none;
+  @apply flex h-screen w-screen justify-center overflow-hidden bg-white p-0 antialiased outline-none;
 }
 
 body {
-  @apply flex h-screen w-screen justify-center;
+  @apply w-xl bg-background flex h-screen justify-between;
 }
