--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -2,12 +2,12 @@
 @tailwind components;
 @tailwind utilities;
 
-html {
+html,body {
   @apply flex h-screen w-screen justify-center overflow-hidden bg-white p-0 antialiased outline-none;
 }
 
-body {
-  @apply flex h-screen w-xl justify-between bg-background;
+#__next {
+  @apply flex h-screen max-w-xl justify-between bg-background;
 }
 
 @layer components {
