--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,3 +16,30 @@ body {
     @apply scrollbar-thin scrollbar-track-transparent scrollbar-thumb-darkIndigo/10 scrollbar-thumb-rounded;
   }
 }
+@layer base {
+  .font-outline-1 {
+    -webkit-text-stroke: 1px black/80;
+  }
+  .font-outline-2 {
+    -webkit-text-stroke: 2px black;
+  }
+  .text-stroke-3 {
+    text-shadow:
+      -3px -3px 0 black,
+      3px -3px 0 black,
+      -3px 3px 0 black,
+      3px 3px 0 black;
+  }
+  .drop-shadow-1 {
+    filter: drop-shadow(0 0 8px black);
+  }
+  .drop-shadow-2 {
+    filter: drop-shadow(0 0 2px black);
+  }
+  .drop-shadow-3 {
+    filter: drop-shadow(0 0 0.8px black);
+  }
+  .drop-shadow-4 {
+    filter: drop-shadow(0 0 0.4px black);
+  }
+}
